--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <option value="600">10 MIN</option>
                     <option value="900">15 MIN</option>
                     <option value="1800">30 MIN</option>
-                    <option value="3600">01 HORA</option>
+                    <option value="3600">01 HR</option>
                 </select>
             </span>
         </header>
