add link p/ download

--- a/index.html
+++ b/index.html
@@ -79,9 +79,14 @@
             </div>
         </main>
         <footer>
-            <small>Robô (Bot), desenvolvido em JavaScript, para registro de logs sobre o estado atual da conexão com a internet (online/off-line).</small>
             <p>
-                Desenvolvido por <a href="https://gerison.net" target="_blank">Gérison Sabino</a>
+                <a href="https://bit.ly/botlogcon" target="_blank">Baixar arquivos para uso off-line</a>
+            </p>
+            <p>
+                <small>Robô (Bot), desenvolvido em JavaScript, para registro de logs sobre o estado atual da conexão com a internet (online/off-line).</small>
+            </p>
+            <p>
+                Desenvolvido por <a href="https://www.gerison.net" target="_blank">Gérison Sabino</a>
             </p>
         </footer>
     </div>
