--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta property="og:site_name" content="botlogcon.js" />
     <meta property="og:description" content="Robô (Bot), desenvolvido em JavaScript, para registro de logs sobre o estado atual da conexão com a internet (online/off-line)." />
     <meta property="og:type" content="website" />
-    <link href="img/icon-online.ico" rel="icon" type="image/x-icon" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/javascript" /> 
-    <link href="css/fontawesome/css/all.min.css" rel="stylesheet" type="text/css" />
-    <script src="js/botlogcon.js" type="text/javascript"></script>
+    <link rel="icon" type="image/x-icon" href="img/icon-online.ico" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" crossorigin="" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />  
+    <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css" />
+    <script type="text/javascript" src="js/botlogcon.js"></script>
     <title>botlogcon.js</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
                 <label>botlogcon.js</label>
             </h2>
             <span>
-                <small>LOG A CADA: </small>
+                <small>INTERVALO: </small>
                 <select id="slc-interval">
                     <option value="5" selected="selected">05 SEG</option>
                     <option value="10">10 SEG</option>
@@ -86,7 +86,7 @@
                 <small>Robô (Bot), desenvolvido em JavaScript, para registro de logs sobre o estado atual da conexão com a internet (online/off-line).</small>
             </p>
             <p>
-                Desenvolvido por <a href="https://www.gerison.net" target="_blank">Gérison Sabino</a>
+                Desenvolvido por <a href="https://www.gerisonsabino.com" target="_blank">Gérison Sabino</a>
             </p>
         </footer>
     </div>
