--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="preconnect" crossorigin="" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />  
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css" />
-    <script type="text/javascript" src="js/botlogcon.js"></script>
     <title>botlogcon.js</title>
 </head>
 <body>
@@ -33,13 +32,13 @@
             <span>
                 <small>INTERVALO: </small>
                 <select id="slc-interval">
-                    <option value="5" selected="selected">05 SEG</option>
+                    <option value="5">05 SEG</option>
                     <option value="10">10 SEG</option>
                     <option value="20">20 SEG</option>
                     <option value="30">30 SEG</option>
                     <option value="40">40 SEG</option>
                     <option value="50">50 SEG</option>
-                    <option value="60">01 MIN</option>
+                    <option value="60" selected="selected">01 MIN</option>
                     <option value="120">02 MIN</option>
                     <option value="180">03 MIN</option>
                     <option value="240">04 MIN</option>
@@ -90,5 +89,6 @@
             </p>
         </footer>
     </div>
+    <script type="text/javascript" src="js/botlogcon.js"></script>
 </body>
 </html>
